= 1.0.1 = *	Very minor fix for ie6. Seems I was a little over zealous trying to fix a 	hasLayout bug. Should be good now. If IE6 is importatnt to you the upgrade 	otherwise just leave it.
git-svn-id: https://plugins.svn.wordpress.org/spectacula-threaded-comments/trunk@197949 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style/comments-dark.css
+++ b/style/comments-dark.css
@@ -302,7 +302,7 @@ a.next:hover {
 .ie6 .trackbackToggle,
 .ie6 #trackbackList,
 .ie6 li.comment,
-.ie6 #comments { height: 1px}
+.ie6 #comments { display: inline-block}
 /* classed added by jQuery only to ie6 */
 .ie6 #commentlist li.first-child {margin-top:0}
 .ie6 #commentlist div.bypostauthor img.avatar{border:solid 2px;	padding:1px}
